# LunarSeeker

./: .gitattributes  .gitignore  AGENTS.md  README.md  dependencies.repos  pytest.ini
docs/: README.md  architecture.md  mission_brief.md  roadmap.md  system_baseline.md  team_workflow.md  terminal_commands.md  third_party_dependencies.md  vendor_agilex_platform_parameters.md  vendor_tzb2026_code_audit.md  weight_budget.md
docs/design/: architecture.md  localization_slam.md  navigation_planning.md  system_baseline.md
docs/engineering/: mock_bringup_validation.md  navigation_visualization.md  team_workflow.md  terminal_commands.md
docs/planning/: mission_brief.md  roadmap.md  vehicle_ros2_migration_route.md  weight_budget.md
docs/references/: scout_ros2_vs_tzb2026_scout_ros.md  third_party_dependencies.md  vendor_agilex_platform_parameters.md  vendor_tzb2026_code_audit.md
docs/validation/: README.md  localization_slam_validation.md  mock_bringup_validation.md  navigation_sim_validation.md  vehicle_noetic_baseline_validation.md
src/algo_localization/: package.xml  setup.cfg  setup.py
src/algo_localization/algo_localization/: __init__.py
src/algo_localization/config/: ekf.yaml  slam_toolbox_mapping.yaml
src/algo_localization/launch/: localization.launch.py  slam_mapping.launch.py
src/algo_localization/resource/: algo_localization
src/algo_localization/test/: test_localization_p2.py  test_slam_mapping_p3.py
src/algo_manipulation/: package.xml  setup.cfg  setup.py
src/algo_manipulation/algo_manipulation/: __init__.py  mock_manipulation.py
src/algo_manipulation/resource/: algo_manipulation
src/algo_manipulation/test/: test_mock_manipulation.py
src/algo_navigation/: package.xml  setup.cfg  setup.py
src/algo_navigation/algo_navigation/: __init__.py  mock_frontier_map.py  mock_navigation.py  navigation_coordinator.py  navigation_goals.py  navigation_scenario_driver.py  navigation_sim_common.py  navigation_sim_world.py  navigation_visualization.py  search_strategy.py
src/algo_navigation/config/: navigation_sim_scenarios.yaml
src/algo_navigation/launch/: navigation_coordinator.launch.py  navigation_visualization.launch.py
src/algo_navigation/resource/: algo_navigation
src/algo_navigation/rviz/: nav2_sim_validation.rviz  navigation_search.rviz
src/algo_navigation/test/: test_mock_frontier_map.py  test_mock_navigation.py  test_navigation_coordinator.py  test_navigation_goals.py  test_navigation_sim_validation.py  test_navigation_visualization.py  test_search_strategy.py
src/algo_perception/: package.xml  setup.cfg  setup.py
src/algo_perception/algo_perception/: __init__.py
src/algo_perception/resource/: algo_perception
src/base_bringup/: package.xml  setup.py
src/base_bringup/base_bringup/: __init__.py  mock_base_sensors.py
src/base_bringup/config/: nav2_params.yaml  robot_profile.yaml
src/base_bringup/launch/: nav2_bringup.launch.py  nav2_sim_validation.launch.py  sim_bringup.launch.py
src/base_bringup/test/: test_launch_file.py  test_mock_base_sensors.py  test_robot_profile.py
src/base_description/: CMakeLists.txt  package.xml
src/base_description/config/: sensor_mounts.yaml
src/base_interfaces/: CMakeLists.txt  package.xml
src/base_interfaces/action/: ExecuteMission.action
src/base_interfaces/msg/: MissionState.msg  NavigationStatus.msg  ScienceTarget.msg  ScienceTargetArray.msg
src/base_interfaces/test/: test_navigation_status_interface.py
src/base_mission/: package.xml  setup.cfg  setup.py
src/base_mission/base_mission/: __init__.py  mission_constants.py  mission_state_machine.py
src/base_mission/test/: test_mission_constants.py
src/tzb_lunar_bringup/: package.xml  setup.cfg  setup.py
src/tzb_lunar_bringup/config/: robot_profile.yaml
src/tzb_lunar_bringup/launch/: sim_bringup.launch.py
src/tzb_lunar_bringup/test/: test_launch_file.py  test_robot_profile.py
src/tzb_lunar_description/: CMakeLists.txt  package.xml
src/tzb_lunar_description/urdf/: tzb_lunar_sampler.urdf.xacro
src/tzb_lunar_interfaces/: CMakeLists.txt  package.xml
src/tzb_lunar_mission/: package.xml  setup.cfg  setup.py
src/tzb_lunar_mission/test/: test_mission_constants.py
src/tzb_lunar_mission/tzb_lunar_mission/: mission_state_machine.py
test/: test_package_layout.py
tzb2026/: COLCON_IGNORE
