<?xml version="1.0"?>
<package format="3">
  <name>algo_perception</name>
  <version>0.1.0</version>
  <description>Perception algorithms for target detection and RGB-D localization.</description>
  <maintainer email="tzb-lunar-team@example.com">TZB Lunar Team</maintainer>
  <license>Apache-2.0</license>


  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>base_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
