<?xml version="1.0"?>
<package format="3">
  <name>base_description</name>
  <version>0.1.0</version>
  <description>Robot description for the SCOUT MINI plus PiPER lunar sampling platform.</description>
  <maintainer email="tzb-lunar-team@example.com">TZB Lunar Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
