<?xml version="1.0"?>
<package format="3">
  <name>tzb_lunar_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration package for the lunar sampling robot.</description>
  <maintainer email="tzb-lunar-team@example.com">TZB Lunar Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tzb_lunar_description</exec_depend>
  <exec_depend>tzb_lunar_mission</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
